--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
     env_file:
       - db.env
 
-  backend:
-    build:
-      context: ./backend
-    ports:
-      - '5000:5000'
-    depends_on:
-      - database
-    env_file:
-      - db.env
+#  backend:
+#    build:
+#      context: ./backend
+#    ports:
+#      - '5000:5000'
+#    depends_on:
+#      - database
+#    env_file:
+#      - db.env
