reverse reverse-geocoding with docker-reverse-geocoding for submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "docker-routing-engine"]
 	path = docker-routing-engine
 	url = git@github.com:mosteligible/docker-routing-engine.git
-[submodule "reverse-geocoding"]
-	path = reverse-geocoding
-	url = git@github.com:mosteligible/reverse-geocoding.git
+[submodule "docker-reverse-geocoding"]
+	path = docker-reverse-geocoding
+	url = git@github.com:mosteligible/docker-reverse-geocoding.git
