use geography points for lat-lon in postgres

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,12 +1,15 @@
-FROM mysql:8.0.31-debian
+FROM postgres:15.2
 
 WORKDIR /tmp
 
-COPY db_setup.sql /docker-entrypoint-initdb.d
+COPY db_setup.sql /docker-entrypoint-initdb.d/
 
 RUN apt-get update && \
-    apt-get upgrade -y
+    apt-get upgrade -y && \
+    apt-get install -y postgis
 
-EXPOSE 3306
-ENTRYPOINT [ "/usr/local/bin/docker-entrypoint.sh" ]
-CMD [ "mysqld" ]
+EXPOSE 5432
+
+ENTRYPOINT [ "docker-entrypoint.sh" ]
+
+CMD [ "postgres" ]
