--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,8 +6,10 @@ flask-wtf
 # to work with geographic data type of postgres
 geoalchemy2
 Jinja2==3.1.2
+pika==1.3.1
 psycopg2-binary[rsa]
 python-dotenv==1.0.0
+pyzmq
 requests
 # required to convert Geography point data from postgres to point coordinates
 shapely
