--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - POSTGRES_PASSWORD=root_pass
       - POSTGRES_USER=jajantaram
     healthcheck:
-      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'"]
+      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${PGRES_USERNAME} -d ${POSTGRES_DB}'"]
       interval: 30s
       timeout: 30s
       retries: 5
@@ -29,3 +29,10 @@ services:
         - ./geocode-data/:/revgeocode/data
         - ./nominatim-data/postgresql:/var/lib/postgresql/12/main
     shm_size: 1gb
+
+  routing-engine:
+    container_name: routing-engine
+    image: routing-engine:latest
+    ports:
+      - '8989:8989'
+    command: --url https://download.geofabrik.de/europe/andorra-latest.osm.pbf --host 0.0.0.0
