--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ flask-sqlalchemy
 flask-wtf
 # to work with geographic data type of postgres
 geoalchemy2
+geographiclib==2.0
 Jinja2==3.1.2
 pika==1.3.1
 psycopg2-binary[rsa]
