--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,18 @@ services:
     ports:
       - '8989:8989'
     command: --url https://download.geofabrik.de/north-america/canada/ontario-latest.osm.pbf --host 0.0.0.0
+
+  simulator:
+    container_name: simulator
+    build:
+      context: ./backend
+    ports:
+      - '5000:5000'
+    env_file:
+      - simulator.env
+    healthcheck:
+      test: curl --fail http://localhost:5000/status || exit 1
+      interval: 60s
+      retries: 5
+      start_period: 20s
+      timeout: 10s
