--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     env_file:
       - db.env
     environment:
-      - POSTGRES_PASSWORD=root_pass
-      - POSTGRES_USER=jajantaram
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
     healthcheck:
       test: ["CMD-SHELL", "sh -c 'pg_isready -U ${PGRES_USERNAME} -d ${POSTGRES_DB}'"]
       interval: 30s
