--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     env_file:
       - db.env
     environment:
-      - POSTGRES_PASSWORD=root_pass
-      - POSTGRES_USER=jajantaram
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
     healthcheck:
       test: ["CMD-SHELL", "sh -c 'pg_isready -U ${PGRES_USERNAME} -d ${POSTGRES_DB}'"]
       interval: 30s
@@ -35,4 +35,19 @@ services:
     image: routing-engine:latest
     ports:
       - '8989:8989'
-    command: --url https://download.geofabrik.de/europe/andorra-latest.osm.pbf --host 0.0.0.0
+    command: --url https://download.geofabrik.de/north-america/canada/ontario-latest.osm.pbf --host 0.0.0.0
+
+  simulator:
+    container_name: simulator
+    build:
+      context: ./backend
+    ports:
+      - '5000:5000'
+    env_file:
+      - simulator.env
+    healthcheck:
+      test: curl --fail http://localhost:5000/status || exit 1
+      interval: 60s
+      retries: 5
+      start_period: 20s
+      timeout: 10s
