add rabbitmq queue

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.2.3
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.2
+Flask-Migrate==4.0.4
 flask-sqlalchemy
 flask-wtf
 # to work with geographic data type of postgres
