update command in gh workflow yaml

--- a/.github/workflows/image-builder.yaml
+++ b/.github/workflows/image-builder.yaml
@@ -8,10 +8,11 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v1
       - name: Simulator Builder
-        run: make build-simulator
+        run: docker build -t simulator:latest -f ./backend/Dockerfile ./backend
       - name: Publish Simulator
         run: |
           docker tag simulator:latest ${{secrets.DOCKER_USER}}/simulator/service:0.0.0
           echo ${{secrets.DOCKER_TOKEN}} | docker login -u ${{secrets.DOCKER_USER}} --password-stdin
-          docker push ${{secrets.DOCKER_USER}}/simulator/service:0.0.0
+          docker push ${{secrets.DOCKER_USER}}/sim-service:0.0.0
