--- a/.github/workflows/image-builder.yaml
+++ b/.github/workflows/image-builder.yaml
@@ -9,8 +9,12 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v1
+      - name: Docker Login
+        run: echo ${{secrets.DOCKER_TOKEN}} | docker login -u ${{secrets.DOCKER_USER}} --password-stdin
+      - name: Pull CI Image
+        run: docker pull ${{secrets.DOCKER_USER}}/ci-image
       - name: Simulator tester
-        run: make pre-commit
+        run: docker run -it -v $(pwd):/tmp ${{secrets.DOCKER_USER}}/ci-image bash -c "pre-commit run --all-files"
   build:
     runs-on: ubuntu-20.04
     steps:
