synchronized position updater

--- a/.github/workflows/image-builder.yaml
+++ b/.github/workflows/image-builder.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches: ["**"]
 
+env:
+  DOCKER_USERNAME: ${{secrets.DOCKER_USER}}
+
 jobs:
   test:
     runs-on: ubuntu-20.04
@@ -14,7 +17,7 @@ jobs:
       - name: Pull CI Image
         run: docker pull ${{secrets.DOCKER_USER}}/ci-image
       - name: Simulator tester
-        run: docker run -it -v $(pwd):/tmp ${{secrets.DOCKER_USER}}/ci-image bash -c "pre-commit run --all-files"
+        run: docker run -t -v $(pwd):/tmp ${{secrets.DOCKER_USER}}/ci-image bash -c "pre-commit run --all-files"
   build:
     runs-on: ubuntu-20.04
     steps:
@@ -22,7 +25,7 @@ jobs:
       - name: Simulator Builder
         run: docker build -t simulator:latest -f ./backend/Dockerfile ./backend
       - name: Publish Simulator
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         run: |
           docker tag simulator:latest ${{secrets.DOCKER_USER}}/sim-service:0.0.0
           echo ${{secrets.DOCKER_TOKEN}} | docker login -u ${{secrets.DOCKER_USER}} --password-stdin
