--- a/dependencies/Dockerfile
+++ b/dependencies/Dockerfile
@@ -1,8 +1,9 @@
 FROM python:3.10-bullseye
 
-WORKDIR /tmp
+WORKDIR /mnt
 
 COPY requirements.txt /tmp
 
 RUN apt-get update && apt-get -y upgrade && \
+    pip install --upgrade pip && \
     pip install -r /tmp/requirements.txt --no-cache-dir
