--- a/dependencies/Dockerfile
+++ b/dependencies/Dockerfile
@@ -1,13 +1,9 @@
 FROM python:3.10-bullseye
 
-WORKDIR /app
+WORKDIR /mnt
 
-COPY . /app
 COPY requirements.txt /tmp
 
 RUN apt-get update && apt-get -y upgrade && \
+    pip install --upgrade pip && \
     pip install -r /tmp/requirements.txt --no-cache-dir
-
-EXPOSE 5000
-
-CMD [ "python", "entrypoint.py" ]
