--- a/dependencies/requirements.txt
+++ b/dependencies/requirements.txt
@@ -10,6 +10,8 @@ geographiclib==2.0
 gunicorn
 Jinja2==3.1.2
 pika==1.3.1
+pre-commit
+pytest
 psycopg2-binary[rsa]
 pytest==7.3.1
 python-dotenv==1.0.0
